# BetterINIH

./: CMakeLists.txt  README.txt
cpp/: AINIReader.cpp  AINIReader.h  INIReader.cpp  INIReader.h
